--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,31 @@ html , body{
     font-family: 'Nunito', sans-serif;
 }
 
+img{
+    max-width: max-content;
+}
+
+*::-webkit-scrollbar {
+    width: 16px;
+    /* display: none; */
+}
+
+*::-webkit-scrollbar-track {
+    border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb {
+    height: 56px;
+    border-radius: 8px;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: rgba(136, 136, 136, 0);
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(85, 85, 85, 0);
+}
+
 ::-webkit-scrollbar:horizontal {
     display: none;
 }
